...
    <string name="rate_text_view">rate</string>
    <string name="wait_text_view">wait</string>
    <string name="arrival_text_view">arrival</string>
    <string name="actions_text_view">actions</string>

    <string name="main_diary_activity">Main Diary Activity</string>
    <string name="contact_name">John</string>
    <string name="contact_surname">Doe</string>
    <string name="contact_role">Boss</string>
    <string name="contact_image">Contact_image</string>
    <string name="contact_address">123 Example Street 1022 Lausanne</string>
    <string name="contact_phone">+4178*******</string>
    <string name="contact_details">Might just be a fun fact ;-)</string>
    <string name="back_to_list_button">Back to List of Contacts</string>
    <string name="all_contact_info">All contact Info</string>
    <string name="contact_details_intro">Contact Details</string>
    <string name="address_ex_layout">Address: </string>
    <string name="phone_nb_ex_layout">Phone Number: </string>
    <string name="notes_ex_layout">Notes: </string>
...
    <string name="textvlabel_waiting_time">Waiting Time</string>
    <string name="textvlabel_rate">Rate</string>
    <string name="textvlabel_actions">Actions</string>
    <string name="textvlabel_notes">Notes</string>
    <string name="rb_label_show_archived">Show archived</string>
    <string name="delete_contact_button">Delete Contact</string>
    <string name="button_modify_contact">Modify Contact</string>
    <string name="form_button_update">Update Contact</string>
    <string name="form_button_create">Create Contact</string>
    <string name="contact_surname_and_name">Doe John</string>
    <string name="search_contacts">Search contacts …</string>
    <string name="loc_service_notification_message">Location service for Factotum is working</string>
    <string name="loc_service_notification_title">Tracking location</string>
    <string name="end_shift">End Shift</string>
...
