...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/roadBookFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_roadbook" />
        <item
            android:id="@+id/directoryFragment"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_directory" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_maps" />
...
